# aplikasi-spp

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  config-overrides.js  package-lock.json  package.json  storage.rules  tsconfig.json  vite.config.js  vite.config.ts
.kilocode/: mcp.json
public/: index.html
src/: App.tsx  firebase.js  firebase.ts  index.tsx
src/components/: BulkPenagihanForm.tsx  Dashboard.css  Dashboard.tsx  FirebaseTest.js  Kelas.tsx  KelasForm.tsx  KelasTable.tsx  Login.css  Login.tsx  Pembayaran.tsx  PembayaranForm.tsx  PembayaranTable.tsx  Penagihan.tsx  PenagihanDetails.tsx  PenagihanForm.tsx  PenagihanPDF.tsx  PenagihanTable.tsx  Settings.tsx  Siswa.tsx  SiswaForm.tsx  SiswaTable.tsx  styles.css
src/context/: AuthContext.tsx
src/types/: declarations.d.ts  index.ts  kelas.ts  pembayaran.ts  penagihan.ts  student.ts
swiftpos/: .env  CHANGELOG.md  TROUBLESHOOTING.md  build_logs.txt  build_out.txt  neon_auth_docs.md  package-lock.json  package.json  tauri_dev_error.txt
swiftpos/src-tauri/: Cargo.toml  build_errors.txt  build_errors_cmd.txt  cargo_build_error.txt  cargo_error.txt  compile_errors.txt  errors.txt  tauri.conf.json  warnings.txt
swiftpos/src-tauri/src/: lib.rs  main.rs
swiftpos/src-tauri/src/commands/: auth.rs  branches.rs  categories.rs  dashboard.rs  kasir.rs  mod.rs  piutang.rs  products.rs  tenants.rs  transactions.rs  users.rs
swiftpos/src-tauri/src/db/: mod.rs
swiftpos/src-tauri/src/middleware/: mod.rs
swiftpos/src-tauri/src/models/: mod.rs
swiftpos/src-tauri/src/utils/: mod.rs
(+4 files in other folders)
