[package]
name = "swiftpos"
version = "1.0.0"
description = "SwiftPOS - Desktop Point of Sale Application"
authors = ["SwiftPOS Team"]
edition = "2021"

[lib]
name = "swiftpos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# Authentication
argon2 = { version = "0.5", features = ["std", "password-hash"] }
jsonwebtoken = "9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Neon Auth
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Password hashing
rand = "0.8"
base64 = "0.22"

# Directory paths
dirs = "5"

# Environment variables
dotenv = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
